--- a/src/SpecTech/MockAndStub/PerfEx.Demo.SystemUnderTest/PerfEx.Demo.SystemUnderTest.csproj
+++ b/src/SpecTech/MockAndStub/PerfEx.Demo.SystemUnderTest/PerfEx.Demo.SystemUnderTest.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemUnderTest\IMembership.cs" />
     <Compile Include="SystemUnderTest\IWorkTogether.cs" />
     <Compile Include="SystemUnderTest\TargetOfTest.cs" />
   </ItemGroup>
