--- a/src/SpecTech/MockAndStub/PerfEx.Demo.SystemUnderTest.Specs/PerfEx.Demo.SystemUnderTest.Specs.csproj
+++ b/src/SpecTech/MockAndStub/PerfEx.Demo.SystemUnderTest.Specs/PerfEx.Demo.SystemUnderTest.Specs.csproj
@@ -53,12 +53,20 @@
   <ItemGroup>
     <Compile Include="SystemUnderTest\PlainRhinoMock\PlainUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemUnderTest\Specs\Steps\TargetOfTest_HelloStudentSteps.cs" />
+    <Compile Include="SystemUnderTest\Specs\TargetOfTest_HelloStudent.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TargetOfTest_HelloStudent.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SystemUnderTest\Specs\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="SystemUnderTest\Specs\TargetOfTest_HelloStudent.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TargetOfTest_HelloStudent.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PerfEx.Demo.SystemUnderTest\PerfEx.Demo.SystemUnderTest.csproj">
