--- a/src/SpecTech/MockAndStub/PerfEx.Demo.SystemUnderTest.Specs/PerfEx.Demo.SystemUnderTest.Specs.csproj
+++ b/src/SpecTech/MockAndStub/PerfEx.Demo.SystemUnderTest.Specs/PerfEx.Demo.SystemUnderTest.Specs.csproj
@@ -51,6 +51,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SpecEventDefinitions.cs" />
     <Compile Include="SystemUnderTest\PlainRhinoMock\PlainUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemUnderTest\Specs\Steps\TargetOfTest_HelloStudentSteps.cs" />
