--- a/src/SpecTech/ExcerciseSpecTableToRound/PerfEx.Demo.SimpleGame.Specs/PerfEx.Demo.SimpleGame.Specs.csproj
+++ b/src/SpecTech/ExcerciseSpecTableToRound/PerfEx.Demo.SimpleGame.Specs/PerfEx.Demo.SimpleGame.Specs.csproj
@@ -52,10 +52,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleGame\Specs\GenerateTableConfiguration.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GenerateTableConfiguration.feature</DependentUpon>
+    </Compile>
+    <Compile Include="SimpleGame\Specs\StepGenerateTableConfiguration.cs" />
     <Compile Include="SpecEventDefinitions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="SimpleGame\Specs\GenerateTableConfiguration.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GenerateTableConfiguration.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PerfEx.Demo.SimpleGame.Commands\PerfEx.Demo.SimpleGame.Commands.csproj">
@@ -75,9 +85,7 @@
       <Name>PerfEx.Demo.SimpleGame</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SimpleGame\Specs\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
