--- a/src/SpecTech/ExcerciseSpecTableToRound/PerfEx.Demo.SimpleGame.DAL.Contracts/PerfEx.Demo.SimpleGame.DAL.Contracts.csproj
+++ b/src/SpecTech/ExcerciseSpecTableToRound/PerfEx.Demo.SimpleGame.DAL.Contracts/PerfEx.Demo.SimpleGame.DAL.Contracts.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\IGameTableDataAccess.cs" />
+    <Compile Include="DAL\IColorGameDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
