--- a/src/SpecTech/ExcerciseSpecTableToRound/PerfEx.Demo.SimpleGame/PerfEx.Demo.SimpleGame.csproj
+++ b/src/SpecTech/ExcerciseSpecTableToRound/PerfEx.Demo.SimpleGame/PerfEx.Demo.SimpleGame.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleGame\ColorGameService.cs" />
     <Compile Include="SimpleGame\GameTableConfigurator.cs" />
   </ItemGroup>
   <ItemGroup />
