Add Executors for PayForColorsWinnerInfoCommand.
Signed-off-by: Teerachai <tlaothong@gmail.com>

--- a/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.BackServices/TheS.Casinova.ColorsGame.BackServices.csproj
+++ b/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.BackServices/TheS.Casinova.ColorsGame.BackServices.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackServices\BackCommands.cs" />
+    <Compile Include="BackServices\BackExecutors\PayForColorsWinnerInfoExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
