--- a/src/CasinovaColors/BlackAndWhite/ColorsGame.Web/ColorsGame.Web.csproj
+++ b/src/CasinovaColors/BlackAndWhite/ColorsGame.Web/ColorsGame.Web.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>ColorsGame.Web</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <SilverlightApplicationList>{917B29E7-ED9D-4F8A-A7A6-A84231829CB3}|..\ColorsGame\ColorsGame.csproj|ClientBin|False,{D39B283C-1EAA-46CF-A629-E7274220416F}|..\TheS.Casinova.ColorsGame.Specs\TheS.Casinova.ColorsGame.Specs.csproj|ClientBin|False</SilverlightApplicationList>
+    <SilverlightApplicationList>{917B29E7-ED9D-4F8A-A7A6-A84231829CB3}|..\ColorsGame\ColorsGame.csproj|ClientBin|False,{D8EFDDF7-2F9F-4864-A476-1DE4F4A603DC}|..\Specs\ColorsGame.Specs\ColorsGame.Specs.csproj|ClientBin|False</SilverlightApplicationList>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -81,8 +81,19 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorsGameService.asmx.cs">
+      <DependentUpon>ColorsGameService.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -90,14 +101,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ClientBin\ColorsGame.Specs.xap" />
     <Content Include="ClientBin\ColorsGame.xap" />
     <Content Include="ClientBin\TheS.Casinova.ColorsGame.Specs.xap" />
+    <Content Include="ColorsGame.SpecsTestPage.aspx" />
+    <Content Include="ColorsGame.SpecsTestPage.html" />
+    <Content Include="ColorsGameService.asmx" />
     <Content Include="ColorsGameTestPage.aspx" />
     <Content Include="ColorsGameTestPage.html" />
+    <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Silverlight.js" />
-    <Content Include="TheS.Casinova.ColorsGame.SpecsTestPage.aspx" />
-    <Content Include="TheS.Casinova.ColorsGame.SpecsTestPage.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
