--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/App.config
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/App.config
@@ -5,7 +5,7 @@
   </configSections>
 
   <specFlow>
-    <unitTestProvider name="MsTest" />
+    <unitTestProvider name="MsTest.Silverlight" />
 
     <runtime detectAmbiguousMatches="true"
              stopAtFirstError="false"
