--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D39B283C-1EAA-46CF-A629-E7274220416F}</ProjectGuid>
+    <ProjectGuid>{D8EFDDF7-2F9F-4864-A476-1DE4F4A603DC}</ProjectGuid>
     <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TheS.Casinova.ColorsGame.Specs</RootNamespace>
-    <AssemblyName>TheS.Casinova.ColorsGame.Specs</AssemblyName>
+    <RootNamespace>ColorsGame.Specs</RootNamespace>
+    <AssemblyName>ColorsGame.Specs</AssemblyName>
     <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -18,9 +18,9 @@
     <SupportedCultures />
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
-    <XapFilename>TheS.Casinova.ColorsGame.Specs.xap</XapFilename>
+    <XapFilename>ColorsGame.Specs.xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
-    <SilverlightAppEntry>TheS.Casinova.ColorsGame.Specs.App</SilverlightAppEntry>
+    <SilverlightAppEntry>ColorsGame.Specs.App</SilverlightAppEntry>
     <TestPageFileName>TestPage.html</TestPageFileName>
     <CreateTestPage>true</CreateTestPage>
     <ValidateXaml>true</ValidateXaml>
@@ -73,6 +73,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core-Silverlight">
+      <HintPath>..\..\..\..\..\lib\Castle.Core-Silverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.DynamicProxy-Silverlight">
+      <HintPath>..\..\..\..\..\lib\Castle.DynamicProxy-Silverlight.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Silverlight.Testing">
       <HintPath>$(MSBuildExtensionsPath)\..\Microsoft SDKs\Silverlight\v4.0\Toolkit\Apr10\Testing\Microsoft.Silverlight.Testing.dll</HintPath>
     </Reference>
@@ -80,7 +86,7 @@
       <HintPath>$(MSBuildExtensionsPath)\..\Microsoft SDKs\Silverlight\v4.0\Toolkit\Apr10\Testing\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks 3.5.Silverlight">
-      <HintPath>..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
+      <HintPath>..\..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
@@ -90,7 +96,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
     <Reference Include="TechTalk.SpecFlow.Silverlight">
-      <HintPath>..\..\..\..\lib\TechTalk.SpecFlow.Silverlight.dll</HintPath>
+      <HintPath>..\..\..\..\..\lib\TechTalk.SpecFlow.Silverlight.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -98,8 +104,6 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecEventDefinitions.cs" />
-    <Compile Include="Specs\Steps\CommonSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -111,12 +115,8 @@
     <None Include="App.config" />
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\ColorsGame\ColorsGame.csproj">
-      <Project>{917B29E7-ED9D-4F8A-A7A6-A84231829CB3}</Project>
-      <Name>ColorsGame</Name>
-    </ProjectReference>
+    <Folder Include="Steps\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <Import Condition="$(SilverlightVersion)=='v3.0'" Project="$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\SilverlightToolkit\Tools\v3.0)Microsoft.Silverlight.Toolkit.Build.targets" />
