--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
@@ -88,6 +88,11 @@
     <Reference Include="Rhino.Mocks 3.5.Silverlight">
       <HintPath>..\..\..\..\..\lib\Rhino.Mocks 3.5.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="System.CoreEx, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Interactive, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Observable, Version=1.0.0.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Reactive, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Reactive.Testing, Version=1.0.2698.204, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
