--- a/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs.csproj
@@ -73,16 +73,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecEventDefinitions.cs" />
     <Compile Include="WebExecutors\CommandManagerStub.cs" />
     <Compile Include="WebExecutors\Specs\GenerateTrackingID.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>GenerateTrackingID.feature</DependentUpon>
     </Compile>
+    <Compile Include="WebExecutors\Specs\Steps\CommonSteps.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\GenerateTrackingIdSteps.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\GenerateTrackingIdStepsBase.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="WebExecutors\Specs\Steps\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="WebExecutors\Specs\GenerateTrackingID.feature">
