--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
@@ -116,6 +116,7 @@
       <DependentUpon>GetWinnerN2N.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IColorsGameService.cs" />
     <Compile Include="SpecEventDefinitions.cs" />
     <Compile Include="Steps\CommonSteps.cs" />
     <Compile Include="Steps\GetWinnerStep.cs" />
