--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
@@ -110,16 +110,27 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CheckGamePlayInfo.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CheckGamePlayInfo.feature</DependentUpon>
+    </Compile>
     <Compile Include="GetWinnerN2N.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>GetWinnerN2N.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestGamePlayInfo.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RequestGamePlayInfo.feature</DependentUpon>
+    </Compile>
     <Compile Include="SpecEventDefinitions.cs" />
     <Compile Include="Steps\CommonSteps.cs" />
     <Compile Include="Steps\GetWinnerStep.cs" />
     <Compile Include="Steps\GetWinnerStepsBase.cs" />
+    <Compile Include="Steps\RequestGamePlayInfoStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -129,11 +140,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="CheckGamePlayInfo.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>CheckGamePlayInfo.feature.cs</LastGenOutput>
+    </None>
     <None Include="GetWinnerN2N.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetWinnerN2N.feature.cs</LastGenOutput>
     </None>
     <None Include="Properties\AppManifest.xml" />
+    <None Include="RequestGamePlayInfo.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>RequestGamePlayInfo.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
