--- a/src/SPerfAll/sPerf_Web/Web.config
+++ b/src/SPerfAll/sPerf_Web/Web.config
@@ -19,7 +19,7 @@
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
 
-    <pages>
+    <pages styleSheetTheme="sPerf">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
