--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -72,8 +72,29 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_themes\sPerf\images\avatar.png" />
+    <Content Include="App_themes\sPerf\images\bmark.png" />
+    <Content Include="App_themes\sPerf\images\contentdown.png" />
+    <Content Include="App_themes\sPerf\images\contentup.png" />
+    <Content Include="App_themes\sPerf\images\edgeline.png" />
+    <Content Include="App_themes\sPerf\images\epstart.png" />
+    <Content Include="App_themes\sPerf\images\footer.png" />
+    <Content Include="App_themes\sPerf\images\green.png" />
+    <Content Include="App_themes\sPerf\images\head.png" />
+    <Content Include="App_themes\sPerf\images\loadingAnimation.gif" />
+    <Content Include="App_themes\sPerf\images\logo-eplearn.png" />
+    <Content Include="App_themes\sPerf\images\macFFBgHack.png" />
+    <Content Include="App_themes\sPerf\images\menu-bg-over.png" />
+    <Content Include="App_themes\sPerf\images\menu-bg.png" />
+    <Content Include="App_themes\sPerf\images\newsboard.png" />
+    <Content Include="App_themes\sPerf\images\newsbotton.png" />
+    <Content Include="App_themes\sPerf\images\search.png" />
+    <Content Include="App_themes\sPerf\images\text.png" />
+    <Content Include="App_themes\sPerf\Layout.css" />
+    <Content Include="App_themes\sPerf\Sites.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Views\Home\Index.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -97,7 +118,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\MasterPage.Master" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
