Demonstrate that Why we CAN NOT upload to the controller action.
Signed-off-by: Teerachai <tlaothong@gmail.com>

--- a/src/WebSpike/FileUpload/UploadWeb/UploadWeb.csproj
+++ b/src/WebSpike/FileUpload/UploadWeb/UploadWeb.csproj
@@ -146,6 +146,7 @@
     <Content Include="NeatUpload\Web.config" />
     <Content Include="NeatUpload\StaticUploadHandler.ashx" />
     <Content Include="Views\Account\Web.config" />
+    <Content Include="Views\Home\Web.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
