สร้าง Models ตัว Silverlight เพื่อใช้ในการทดสอบการสร้าง Table
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/ColorsGame.Specs.csproj
@@ -110,6 +110,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CreateGameRoundN2N.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CreateGameRoundN2N.feature</DependentUpon>
+    </Compile>
     <Compile Include="GetWinnerN2N.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -119,6 +124,7 @@
     <Compile Include="Service\IColorsGameService.cs" />
     <Compile Include="SpecEventDefinitions.cs" />
     <Compile Include="Steps\CommonSteps.cs" />
+    <Compile Include="Steps\CreateGameRoundStep.cs" />
     <Compile Include="Steps\GetWinnerStep.cs" />
     <Compile Include="Steps\GetWinnerStepsBase.cs" />
   </ItemGroup>
@@ -130,6 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="CreateGameRoundN2N.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>CreateGameRoundN2N.feature.cs</LastGenOutput>
+    </None>
     <None Include="GetWinnerN2N.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetWinnerN2N.feature.cs</LastGenOutput>
