--- a/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.Commands/TheS.Casinova.ColorsGame.Commands.csproj
+++ b/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.Commands/TheS.Casinova.ColorsGame.Commands.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Commands\GetGamePlayInfoCommand.cs" />
     <Compile Include="Commands\PayForColorsWinnerInfoCommand.cs" />
+    <Compile Include="Commands\SaveTableConfigurationCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
