--- a/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.Models/TheS.Casinova.ColorsGame.Models.csproj
+++ b/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.Models/TheS.Casinova.ColorsGame.Models.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Models\GamePlayInformation.cs" />
     <Compile Include="Models\PlayerInformation.cs" />
+    <Compile Include="Models\TableConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
