Create Specs/GenerateTrackingID.feature Create Specs/Steps/CommonSteps.cs Create Specs/Steps/GenerateTrackingIdSteps.cs Create Specs/Steps/GenerateTrackingIdStepsBase.cs

--- a/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs/App.config
+++ b/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs/App.config
@@ -11,4 +11,8 @@
              stopAtFirstError="false"
              missingOrPendingStepsOutcome="Inconclusive" />
   </specFlow>
+  <system.serviceModel>
+    <bindings />
+    <client />
+  </system.serviceModel>
 </configuration>
