--- a/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.WebExecutors/TheS.Casinova.ColorsGame.WebExecutors.csproj
+++ b/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.WebExecutors/TheS.Casinova.ColorsGame.WebExecutors.csproj
@@ -48,6 +48,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\ColorsGame.Web\ColorsGame.Web.csproj">
+      <Project>{0CB3D1F8-EDD7-473D-8420-ACF4E5BA355F}</Project>
+      <Name>ColorsGame.Web</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TheS.Casinova.ColorsGame.BackServices.Contracts\TheS.Casinova.ColorsGame.BackServices.Contracts.csproj">
       <Project>{625662C6-61FF-4A91-B068-A1DA68D553A5}</Project>
       <Name>TheS.Casinova.ColorsGame.BackServices.Contracts</Name>
