--- a/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs/TheS.Casinova.ColorsGame.WebExecutors.Specs.csproj
@@ -79,6 +79,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecEventDefinitions.cs" />
     <Compile Include="WebExecutors\CommandManagerStub.cs" />
+    <Compile Include="WebExecutors\Specs\GetGameRoundWinner.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetGameRoundWinner.feature</DependentUpon>
+    </Compile>
     <Compile Include="WebExecutors\Specs\Steps\GenerateTrackingID.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -87,12 +92,18 @@
     <Compile Include="WebExecutors\Specs\Steps\CommonSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\GenerateTrackingIdSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\GenerateTrackingIdStepsBase.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\GetGameRoundWinnerSteps.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\GetGameRoundWinnerStepsBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="WebExecutors\Specs\GetGameRoundWinner.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetGameRoundWinner.feature.cs</LastGenOutput>
+    </None>
     <None Include="WebExecutors\Specs\Steps\GenerateTrackingID.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GenerateTrackingID.feature.cs</LastGenOutput>
