--- a/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.WebExecutors/TheS.Casinova.ColorsGame.WebExecutors.csproj
+++ b/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.WebExecutors/TheS.Casinova.ColorsGame.WebExecutors.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebExecutors\GetGameRoundWinnerExecutor.cs" />
     <Compile Include="WebExecutors\PayForColorsWinnerInfoExecutor.cs" />
   </ItemGroup>
   <ItemGroup />
