--- a/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.Models/TheS.Casinova.ColorsGame.Models.csproj
+++ b/src/CasinovaColors/BlackAndWhite/TheS.Casinova.ColorsGame.Models/TheS.Casinova.ColorsGame.Models.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\GamePlayInformation.cs" />
+    <Compile Include="Models\GameRoundInformation.cs" />
     <Compile Include="Models\PlayerInformation.cs" />
     <Compile Include="Models\TableConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
